<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:background="@color/mainBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:paddingTop="10dp"
        android:background="@drawable/actionbar_background"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/li_order_order"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:paddingBottom="10dp"/>
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:text="@string/ifFotograaaf"
            android:id="@+id/li_order_user"
            android:layout_margin="10dp"/>
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_margin="10dp"
            android:text="@string/measure"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_margin="10dp"
            android:text="@string/amount"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_margin="10dp"
            android:text="@string/piece_price"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:layout_margin="10dp"
            android:text="@string/total_price"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewOrderLines"
            android:layout_weight="1"
            style="@style/ListView">
        </ListView>
    </LinearLayout>
</LinearLayout>
