<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:paddingTop="20dp"
        android:paddingLeft="8dp"
        android:background="@drawable/actionbar_background"
        android:orientation="horizontal">
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ifFotograaaf"
            android:layout_weight="1"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:id="@+id/li_order_user"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_date"
            />
        <TextView style="@style/tableHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activated"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listViewSubscriptions"
            android:layout_weight="1"
            style="@style/ListView">
        </ListView>
    </LinearLayout>
</LinearLayout>
