<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:padding="60dp"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/MainTextColor"
        android:textSize="60sp"/>
    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:text="@string/login_email"
        android:textSize="30sp"
        android:textColor="@color/MainTextColor"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/MainTextColor"
        android:textSize="30sp"
        android:padding="10dp"
        android:background="@drawable/edittext_border"/>
    <TextView
        android:layout_marginTop="40dp"
        android:text="@string/login_password"
        android:layout_width="wrap_content"
        android:textColor="@color/MainTextColor"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:textColor="@color/MainTextColor"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/edittext_border"/>

    <Button
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:background="@drawable/actionbar_background"
        android:textColor="@color/White"
        android:text="@string/login_button"/>
</LinearLayout>
