<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/mainBackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="@color/White">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:layout_marginBottom="15dp">
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etAchternaam"
                    android:hint="@string/lastName"
                    android:layout_weight="90"
                    android:textColor="@color/Black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etTussenvoegsel"
                    android:hint="@string/tussenvoegsel"
                    android:layout_weight="10"
                    android:textColor="@color/Black"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etStraatnaam"
                    android:hint="@string/Street"
                    android:layout_weight="90"
                    android:textColor="@color/Black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etHuisnummer"
                    android:hint="@string/houseNumber"
                    android:layout_weight="10"
                    android:textColor="@color/Black"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:id="@+id/etStad"
                    android:hint="@string/City"
                    android:layout_weight="90"
                    android:textColor="@color/Black"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:padding="10dp"
                    android:id="@+id/etPostcode"
                    android:hint="@string/zipcode"
                    android:layout_weight="10"
                    android:textColor="@color/Black"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etEmail"
                    android:hint="@string/email_nl"
                    android:layout_weight="100"
                    android:textColor="@color/Black"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:padding="10dp"
                    android:background="@drawable/edittext_border"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:id="@+id/etWachtwoord"
                    android:hint="@string/login_password"
                    android:layout_weight="100"
                    android:textColor="@color/Black"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerLand"
                    android:textColor="@color/Black"
                    android:background="@color/mainControlBackground"/>
            </TableRow>
            <TableRow
                android:layout_marginBottom="15dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Update"
                    android:padding="15dp"
                    android:textSize="30sp"
                    android:layout_marginTop="60dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/White"
                    android:onClick="update"
                    android:background="@drawable/actionbar_background"
                    android:id="@+id/button"
                    android:layout_weight="100"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>