<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PhotographerPriceActivity"
    android:background="@color/mainBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="8dp"
            android:background="@color/White">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TableLayout android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="match_parent">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="15dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:layout_weight="0.5"
                        android:text="@string/size">
                    </TextView>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:text="@string/price">
                    </TextView>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:textSize="30sp"
                        android:id="@+id/pp_1"
                        android:text=""
                        android:paddingTop="10dp"
                        android:textColor="@color/mainControlBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edittext_border"
                        android:id="@+id/sp_1"
                        android:inputType="numberDecimal"
                        android:layout_weight="1">
                    </EditText>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:textSize="30sp"
                        android:id="@+id/pp_2"
                        android:text=""
                        android:paddingTop="10dp"
                        android:textColor="@color/mainControlBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edittext_border"
                        android:id="@+id/sp_2"
                        android:inputType="numberDecimal"
                        android:layout_weight="1">
                    </EditText>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:textSize="30sp"
                        android:id="@+id/pp_3"
                        android:text=""
                        android:paddingTop="10dp"
                        android:textColor="@color/mainControlBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:background="@drawable/edittext_border"
                        android:id="@+id/sp_3"
                        android:inputType="numberDecimal"
                        android:layout_weight="1">
                    </EditText>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">
                    <TextView
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:textSize="30sp"
                        android:id="@+id/pp_4"
                        android:text=""
                        android:paddingTop="10dp"
                        android:textColor="@color/mainControlBackground"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Black"
                        android:textSize="30sp"
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:background="@drawable/edittext_border"
                        android:id="@+id/sp_4"
                        android:inputType="numberDecimal"
                        android:layout_weight="1">
                    </EditText>
                </TableRow>

                    <Button
                        android:layout_marginTop="30dp"
                        android:layout_gravity="left|center_vertical"
                        android:textSize="30sp"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/actionbar_background"
                        android:textColor="@color/White"
                        android:onClick="savePrices"
                        android:id="@+id/prices_save"
                        android:text="@string/save" />

            </TableLayout>
        </ScrollView>
        </LinearLayout>
</LinearLayout>

